[package]
name = "rauncher"
version = "0.1.0"
authors = ["orcaxs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
lazy_static = "1.4.0"
futures = "0.3.1"
iced = "0.1.0-beta"
dotenv = "0.15.0"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v1"] }
rusqlite = { version = "0.20.0", features = ["chrono", "serde_json", "url", "uuid"] }
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
log = "0.4.8"

[patch.crates-io]
rusqlite = { git = "https://github.com/jgallagher/rusqlite" }
